ImpUtils/ImgUtils: Fix wrong 16bit flag and CT swap issues